--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,13 @@ project(jacobi_async C)
 
 set(CMAKE_C_STANDARD 11)
 
+# Wyszukiwanie i konfiguracja OpenMP
+find_package(OpenMP REQUIRED)
+if(OpenMP_C_FOUND)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_C_FLAGS}")
+endif()
+
 add_executable(
         jacobi_async
         main.c
@@ -13,3 +20,6 @@ add_executable(
 )
 
 target_link_libraries(jacobi_async m)
+if(OpenMP_C_FOUND)
+    target_link_libraries(jacobi_async OpenMP::OpenMP_C)
+endif()
